# kienhoang128199x-CMakeLearningImportant

./: README.md
CMakeLearning/: CMakeLists.txt  macro.h.in  main.cpp
CMakeLearning/lib/lib64/: CMakeLists.txt  lib.cpp  lib.h
